--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "million": "^1.10.15-0"
+    "million": "^2.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "vite": "^2.9.9"
