--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.5.5",
+    "fuzzy-search": "^3.2.1",
     "million": "^2.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tinder-card": "^1.6.4"
   },
   "devDependencies": {
-    "vite": "^2.9.9"
+    "vite": "^5.2.8"
   }
 }
